# Anytrack-V2

./: .gitignore  INSTALL.md  README.md  install_requirements.bat  pyproject.toml  requirements.txt  run.bat  run.sh
docs/: USER_MANUAL.md
src/pattern_tracking/: Main.py
src/pattern_tracking/logic/: BackgroundComputation.py
src/pattern_tracking/logic/tracker/: AbstractTracker.py  FixedPointTracker.py  KCFTracker.py  PatternTracker.py  ReferenceTracker.py  TemplateTracker.py  TrackerManager.py  TrackerType.py
src/pattern_tracking/logic/video/: LiveFeedWrapper.py  VideoReader.py
src/pattern_tracking/objects/: RegionOfInterest.py
src/pattern_tracking/qt_gui/: AppMainWindow.py
src/pattern_tracking/qt_gui/dock_widgets/: LivePlotterDockWidget.py
src/pattern_tracking/qt_gui/logic/: UserRegionPlacer.py
src/pattern_tracking/qt_gui/top_menu_bar/plot/: ClearActivePlotAction.py  ClearAllPlotsAction.py  CreatePlotAction.py  NewPlotQDialog.py  PlotMenu.py
src/pattern_tracking/qt_gui/top_menu_bar/trackers/: CreateTrackerAction.py  EditActiveTrackerAction.py  EditActiveTrackerDialog.py  NewTrackerQDialog.py  SwitchTrackersSubMenu.py  TrackersMenu.py
src/pattern_tracking/qt_gui/top_menu_bar/video/: SelectVideoAction.py  (+3 more)
src/pattern_tracking/qt_gui/widgets/: ContrastControlWidget.py  DistancePlotWidget.py  FrameDisplayWidget.py  VideoControlWidget.py
src/pattern_tracking/shared/: constants.py  utils.py
video_assets/: TEST2.csv  gferzghjkdqfsghjdefazghjv.csv  gvfdzsbjfds.csv  kfez.csv  test.csv  test10.csv  test3.csv  test4.csv  test5.csv  test6.csv  test7.csv
